Fixed card bleeding out of grids on very small screens

--- a/src/templates/assets/stylesheets/main/modifiers/_grid.scss
+++ b/src/templates/assets/stylesheets/main/modifiers/_grid.scss
@@ -30,7 +30,14 @@
   // Grid container
   .grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(#{px2rem(320px)}, 1fr));
+    grid-template-columns:
+      repeat(
+        auto-fit,
+        minmax(
+          min(100%, #{px2rem(320px)}),
+          1fr
+        )
+      );
     grid-gap: px2rem(8px);
     margin: 1em 0;
 
